kubernetes/apps/n8n/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: n8n
  namespace: n8n
  labels:
    app.kubernetes.io/name: n8n
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
    - host: n8n.localhost.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: n8n
                port:
                  number: 5678
